# TicketAPI

./: .gitignore  Cargo.toml  README.md
docs/: blockchain.md
docs/api-reference/: openapi.json
docs/api-reference/endpoint/: create.mdx  delete.mdx  get.mdx  update.mdx
docs/setup/migrations/: supabase.sql
ignotum_tickets/: Cargo.toml
ignotum_tickets/src/: api_utils.rs  auth_utils.rs  db_handler.rs  main.rs
ignotum_tickets/static/: styles.css
ignotum_tickets/templates/: dashboard.html.tera  index.html.tera  signup.html.tera
legacy/: Cargo.toml
legacy/src/: main.rs
src/: api_utils.rs  auth_utils.rs  main.rs
static/: package-lock.json  tailwind.config.js
templates/: login.html.tera
ticketapi/: Cargo.toml
ticketapi/src/: main.rs
unnamed_product/: Cargo.toml
unnamed_product/src/: api_utils.rs  auth_utils.rs  db_handler.rs  main.rs
