[package]
name = "ticketapi"
version = "0.1.6"
edition = "2021"
authors = ["Johannes Schießl","Jakob Grätz"]

[dependencies]
rocket_contrib = { version = "0.4.10", features = ["json"] }
rocket = { version = "0.5.0", features = ["secrets", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = "1.0.197"
futures = "0.3.30"
serde_json = "1.0.115"
tokio-postgres = "0.7.10"
dotenv = "0.15.0"
