[package]
name = "unnamed_product"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Schießl","Jakob Grätz"]

[dependencies]
rocket_contrib = { version = "0.4.10", features = ["json"] }
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
